--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     
     <!-- Add Playfair Display font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
+  
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E7PP1NSTXQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-E7PP1NSTXQ');
+    </script>
+  
+  
   </head>
 
   <body>
