--- a/index.html
+++ b/index.html
@@ -4,33 +4,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fiscal Compass - Free Financial Planning Tools</title>
-    <meta name="description" content="Free financial planning calculators with no sign up required. Plan for retirement, calculate investments, manage debt, and more." />
-    <meta name="author" content="Fiscal Compass" />
+    <title>Fiscal Compass - Free Financial Calculators | No Sign Up Required</title>
+    <meta name="description" content="Free financial calculators for retirement, mortgage, investment, debt management, and more. No registration required. Save calculations locally with interactive charts and graphs." />
+    <meta name="author" content="Christopher R McGuire" />
+    <meta name="keywords" content="financial calculator, retirement planning, mortgage calculator, investment calculator, debt management, tax planning, free calculators, no registration" />
+    <link rel="canonical" href="https://fiscalcompass.net" />
 
-    <meta property="og:title" content="Fiscal Compass - Free Financial Planning Tools" />
-    <meta property="og:description" content="Free financial planning calculators with no sign up required. Plan for retirement, calculate investments, manage debt, and more." />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Fiscal Compass - Free Financial Calculators | No Sign Up Required" />
+    <meta property="og:description" content="Free financial calculators for retirement, mortgage, investment, debt management, and more. No registration required. Save calculations locally with interactive charts and graphs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://fiscalcompass.net" />
+    <meta property="og:image" content="https://fiscalcompass.net/SearchImage.png" />
+    <meta property="og:site_name" content="Fiscal Compass" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Fiscal Compass - Free Financial Calculators" />
+    <meta name="twitter:description" content="Free financial calculators with no sign up required. Interactive charts and local data saving." />
+    <meta name="twitter:image" content="https://fiscalcompass.net/SearchImage.png" />
     
-    <!-- Add Playfair Display font -->
+    <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
-  
-    <!-- Google tag (gtag.js) -->
+    
+    <!-- Schema.org Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Fiscal Compass",
+      "url": "https://fiscalcompass.net",
+      "description": "Free financial calculators and planning tools",
+      "applicationCategory": "Financial Software",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Christopher R McGuire"
+      },
+      "featureList": [
+        "Retirement Planning",
+        "Mortgage Calculators",
+        "Investment Tools",
+        "Debt Management",
+        "Tax Planning"
+      ]
+    }
+    </script>
+
+    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E7PP1NSTXQ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-E7PP1NSTXQ');
     </script>
-  
-  
   </head>
 
   <body>
