--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <title>Fiscal Compass - Free Financial Calculators | No Sign Up Required</title>
     <meta name="description" content="Free financial calculators for retirement, mortgage, investment, debt management, and more. No registration required. Save calculations locally with interactive charts and graphs." />
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="Fiscal Compass Blog Feed" href="/rss.xml" />
     <meta name="author" content="Christopher R McGuire" />
     <meta name="keywords" content="financial calculator, retirement planning, mortgage calculator, investment calculator, debt management, tax planning, free calculators, no registration" />
     <link rel="canonical" href="https://fiscalcompass.net" />
