--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       gtag('js', new Date());
       gtag('config', 'G-E7PP1NSTXQ');
     </script>
+
+    <!-- AdSense -->
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6277261464174433"
+     crossorigin="anonymous"></script>
+     
   </head>
 
   <body>
