--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#007bff" />
+    <meta http-equiv="content-language" content="en-us" />
+    <meta http-equiv="cache-control" content="public, max-age=86400, must-revalidate" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <title>Fiscal Compass - Free Financial Calculators | No Sign Up Required</title>
     <meta name="description" content="Free financial calculators for retirement, mortgage, investment, debt management, and more. No registration required. Save calculations locally with interactive charts and graphs." />
