--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
     <title>
-      Fiscal Compass - Free Financial Calculators | No Sign Up Required
+      Fiscal Compass: Free Financial Calculators & Planning Tools | No Sign Up
     </title>
     <meta
       name="description"
-      content="Free financial calculators for retirement, mortgage, investment, debt management, and more. No registration required. Save calculations locally with interactive charts and graphs."
+      content="Unlock financial wisdom with Fiscal Compass. Free, easy-to-use calculators for retirement, mortgage, investments, debt, taxes & more. Plan your future confidently. No sign-up needed."
     />
 
     <!-- Favicons -->
@@ -44,11 +44,11 @@
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Fiscal Compass - Free Financial Calculators | No Sign Up Required"
+      content="Fiscal Compass: Free Financial Calculators & Planning Tools | No Sign Up"
     />
     <meta
       property="og:description"
-      content="Free financial calculators for retirement, mortgage, investment, debt management, and more. No registration required. Save calculations locally with interactive charts and graphs."
+      content="Unlock financial wisdom with Fiscal Compass. Free, easy-to-use calculators for retirement, mortgage, investments, debt, taxes & more. Plan your future confidently. No sign-up needed."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fiscalcompass.net" />
@@ -62,11 +62,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Fiscal Compass - Free Financial Calculators"
+      content="Fiscal Compass: Free Financial Calculators & Planning Tools"
     />
     <meta
       name="twitter:description"
-      content="Free financial calculators with no sign up required. Interactive charts and local data saving."
+      content="Unlock financial wisdom with Fiscal Compass. Free calculators for retirement, mortgage, investments & more. Plan confidently, no sign-up needed."
     />
     <meta
       name="twitter:image"
