--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       content="https://fiscalcompass.net/SearchImage.png"
     />
 
+    <meta name="fo-verify" content="6ca1b52f-2ecd-4b52-a09c-743fddbbc49a" />
+
     <!-- Fonts -->
     <link
       rel="stylesheet"
